Category bugs are fixed partly

--- a/_posts/2016-02-03-Fun-huh.markdown
+++ b/_posts/2016-02-03-Fun-huh.markdown
@@ -1,7 +1,9 @@
 ---
 layout: posts_layout
 title : Fun in writing blogs
-categories : blog,new
+categories :
+    - blog
+    - fun
 tags: fun,first
 ---
 
